test(lotto) : 로또 List 객체로 변경에 맞게 테스트 변경