@@ -29,7 +29,7 @@ class LottoTest {
     @DisplayName("당첨 로또 번호 테스트")
     @Test
     void getNumbers() {
-        Lotto lotto = new Lotto(List.of(1, 2, 3 ,4 ,5 ,6));
+        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3 ,4 ,5 ,6));
         assertThat(lotto.getNumbers()).isEqualTo(Arrays.asList(1,2,3,4,5,6));
     }
 }
